fix:修复评论不显示bug

--- a/_tabs/about.html
+++ b/_tabs/about.html
@@ -1,8 +1,14 @@
 ---
 layout: page
+icon: fas fa-user-circle
+order: 4
 ---
 
 <style>
+
+* {
+    font-size: medium;
+}
 
 .about-title-container {
     background-color: #E2ECFC;
