--- a/_tabs/about.html
+++ b/_tabs/about.html
@@ -6,7 +6,7 @@ order: 4
 
 <style>
 
-* {
+#about-content *:not(#name) {
     font-size: medium;
 }
 
@@ -87,7 +87,7 @@ order: 4
 
 </style>
 
-<div>
+<div id="about-content">
     <div>
         <h1 id="name">{{site.social.name}}</h1>
         <div class="infos">
