--- a/_tabs/about.html
+++ b/_tabs/about.html
@@ -156,10 +156,10 @@ order: 4
                 <img src="https://skillicons.dev/icons?i=java,kotlin,python,c,cpp,html,css,javascript" alt="programming-language"/>
             </li>
             <li>
-                <img src="https://skillicons.dev/icons?i=spring,vue,nodejs,pytorch,maven,gradle,cmake,mysql,sqlite,linux" alt="programming-tool"/>
+                <img src="https://skillicons.dev/icons?i=spring,vue,pytorch,maven,gradle,mysql,sqlite,linux" alt="programming-tool"/>
             </li>
             <li>
-                <img src="https://skillicons.dev/icons?i=idea,pycharm,clion,webstorm,androidstudio,vscode,visualstudio,git,vim,md" alt="programming-tool"/>
+                <img src="https://skillicons.dev/icons?i=idea,pycharm,webstorm,androidstudio,vscode,git,vim,md" alt="programming-tool"/>
             </li>
         </ul>
     </div>
