--- a/_tabs/about.html
+++ b/_tabs/about.html
@@ -93,7 +93,7 @@ order: 4
         <div class="infos">
             <div class="info-item">
                 <i class="fa-solid fa-location-dot"></i>
-                <span>北京-中国</span>
+                <span>河北-中国</span>
             </div>
             <div class="info-item">
                 <i class="fa-solid fa-envelope"></i>
